new.tf
resource "aws_vpc" "Project" {
    cidr_block = "120.0.0.0/16"
    tags = {
        Name = "Project"
    }
}

resource "tls_private_key" "rsa" {
    algorithm = "RSA"
    rsa_bits = 4096  
}

resource "aws_key_pair" "projectKey" {
    key_name = "projectKey"
    public_key = tls_private_key.rsa.public_key_openssh
}

resource "local_file" "keystrorage" {
    filename = "projectKey.pem"
    content = tls_private_key.rsa.private_key_pem
}

resource "aws_subnet" "subnet_dev" {
    vpc_id = aws_vpc.Project.id
    cidr_block = "120.0.1.0/24"
    availability_zone = "${var.REGION}a"
    tags = {
      "Name" = "Dev"
    }
}

resource "aws_subnet" "subnet_qa" {
    vpc_id = aws_vpc.Project.id
    cidr_block = "120.0.2.0/24"
    availability_zone = "${var.REGION}b"
    tags = {
      "Name" = "Qa"
    }
}

resource "aws_subnet" "subnet_uat" {
    vpc_id = aws_vpc.Project.id
    cidr_block = "120.0.3.0/24"
    availability_zone = "${var.REGION}a"
    tags = {
      "Name" = "Uat"
    }
}

resource "aws_subnet" "subnet_devops" {
    vpc_id = aws_vpc.Project.id
    cidr_block = "120.0.4.0/24"
    availability_zone = "${var.REGION}b"
    tags = {
      "Name" = "Devops"
    }
}

resource "aws_subnet" "subnet_jumpping" {
    vpc_id = aws_vpc.Project.id
    cidr_block = "120.0.0.0/24"
    map_public_ip_on_launch = true
    availability_zone = "${var.REGION}a"
    tags = {
      "Name" = "Jumpping"
    }
}

resource "aws_internet_gateway" "Project_gateway" {
    vpc_id = aws_vpc.Project.id
    tags = {
        Name = "project_IG"
    }  
}

resource "aws_eip" "Nat_eip" {
        tags = {
                Name = "test-eip"
        }
}

resource "aws_nat_gateway" "privateIG" {
    allocation_id = aws_eip.Nat_eip.allocation_id
    subnet_id = aws_subnet.subnet_jumpping.id
    tags = {
        Name = "privateIG"
    }
    depends_on = [
      aws_internet_gateway.Project_gateway
    ]
}

resource "aws_route_table" "public_route" {
    vpc_id = aws_vpc.Project.id
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.Project_gateway.id
    }
    tags = {
      "Name" = "PublicRouteTable"
    }
}

resource "aws_route" "NatRoute" {
    route_table_id = aws_vpc.Project.main_route_table_id
    destination_cidr_block = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.privateIG.id
}

resource "aws_route_table_association" "publictable1" {
    route_table_id = aws_route_table.public_route.id
    subnet_id = aws_subnet.subnet_jumpping.id
}

resource "aws_route_table_association" "private_route1" {
    route_table_id = aws_vpc.Project.main_route_table_id
    subnet_id = aws_subnet.subnet_dev.id
}

resource "aws_route_table_association" "private_route2" {
    route_table_id = aws_vpc.Project.main_route_table_id
    subnet_id = aws_subnet.subnet_qa.id
}

resource "aws_route_table_association" "private_route3" {
    route_table_id = aws_vpc.Project.main_route_table_id
    subnet_id = aws_subnet.subnet_uat.id
}

resource "aws_route_table_association" "private_route4" {
    route_table_id = aws_vpc.Project.main_route_table_id
    subnet_id = aws_subnet.subnet_devops.id
}



resource "aws_security_group" "projectSG" {
    vpc_id = aws_vpc.Project.id
    name = "public_SG"
    description = "public_rule"
    ingress {
      cidr_blocks = [ "0.0.0.0/0" ]
      description = "ssh"
      from_port = 22
      protocol = "tcp"
      to_port = 22
    }

    ingress {
      cidr_blocks = [ "0.0.0.0/0" ]
      description = "http"
      from_port = 80
      protocol = "tcp"
      to_port = 80
    }

    ingress {
      cidr_blocks = [ "0.0.0.0/0" ]
      description = "https"
      from_port = 443
      protocol = "tcp"
      to_port = 443
    }

    ingress {
      cidr_blocks = [ "0.0.0.0/0" ]
      description = "tomcat"
      from_port = 8080
      protocol = "tcp"
      to_port = 8080
    }
    ingress {
      cidr_blocks = [ "0.0.0.0/0" ]
      description = "rdp"
      from_port = 3389
      protocol = "tcp"
      to_port = 3389
    }
    
    egress {
      cidr_blocks = [ "0.0.0.0/0" ]
      description = "All_traffic"
      from_port = 0
      protocol = "-1"
      self = false
      to_port = 0
    }
}

resource "aws_security_group" "projectSGPrivate" {
    vpc_id = aws_vpc.Project.id
    name = "private_SG"
    description = "private_rule"
    ingress {
      cidr_blocks = [aws_vpc.Project.cidr_block]
      description = "ssh"
      from_port = 22
      protocol = "tcp"
      to_port = 22
    }

    ingress {
      cidr_blocks = [aws_vpc.Project.cidr_block]
      description = "http"
      from_port = 80
      protocol = "tcp"
      to_port = 80
    }

    ingress {
      cidr_blocks = [aws_vpc.Project.cidr_block]
      description = "https"
      from_port = 443
      protocol = "tcp"
      to_port = 443
    }

    ingress {
      cidr_blocks = [aws_vpc.Project.cidr_block]
      description = "tomcat"
      from_port = 8080
      protocol = "tcp"
      to_port = 8080
    }
    
    egress {
      cidr_blocks = [ "0.0.0.0/0" ]
      description = "All_traffic"
      from_port = 0
      protocol = "-1"
      self = false
      to_port = 0
    }
}

resource "aws_instance" "Jenkins" {
    ami = var.AMI[var.REGION]
    instance_type = var.type
    key_name = aws_key_pair.projectKey.key_name
    subnet_id = aws_subnet.subnet_devops.id
    security_groups = [aws_security_group.projectSGPrivate.id]
    iam_instance_profile = "cloudAgent"
    user_data = <<EOF
    #!/bin/bash
sudo su -
yum update -y
yum install git java-1.8.0-openjdk-devel.x86_64 maven awslogs -y
cd /
mkdir tom
cd tom/
wget https://dlcdn.apache.org/tomcat/tomcat-9/v9.0.71/bin/apache-tomcat-9.0.71.zip
unzip apache-tomcat-9.0.71.zip
em -rm apache-tomcat-9.0.71.zip
chmod -R 744 apache-tomcat-9.0.71
./apache-tomcat-9.0.71/bin/startup.sh
cd apache-tomcat-9.0.71/webapps/
wget https://get.jenkins.io/war-stable/2.332.2/jenkins.war

EOF
    tags = {
      Name = "JenkinsMaster"
    }
}

resource "aws_instance" "AnsibleController" {
    ami = var.AMI[var.REGION]
    instance_type = var.type
    key_name = aws_key_pair.projectKey.key_name
    subnet_id = aws_subnet.subnet_devops.id
    security_groups = [aws_security_group.projectSGPrivate.id]
    iam_instance_profile = "cloudAgent"
    user_data = <<EOF
    #!/bin/bash
yum install git java-1.8.0-openjdk-devel.x86_64 awslogs -y
sudo amazon-linux-extras install ansible2 -y

EOF
    tags = {
      Name = "AnsibleController"
    }
}

resource "aws_instance" "DevEc2" {
    ami = var.AMI[var.REGION]
    instance_type = var.type
    key_name = aws_key_pair.projectKey.key_name
    subnet_id = aws_subnet.subnet_dev.id
    security_groups = [aws_security_group.projectSGPrivate.id]
    count = 2
    user_data = <<EOF
    #!/bin/bash
file=/etc/ssh/sshd_config
cp -p $file $file.old &&
while read key other
do
 case $key in
 PasswordAuthentication) other=yes;;
 PermitRootLogin) other=yes;;
 esac
 echo "$key $other"
done < $file.old > $file

EOF
    tags = {
      Name = "DevEc2"
    }  
}

resource "aws_instance" "QaEc2" {
    ami = var.AMI[var.REGION]
    instance_type = var.type
    key_name = aws_key_pair.projectKey.key_name
    subnet_id = aws_subnet.subnet_qa.id
    security_groups = [aws_security_group.projectSGPrivate.id]
    count = 2
    user_data = <<EOF
    #!/bin/bash
file=/etc/ssh/sshd_config
cp -p $file $file.old &&
while read key other
do
 case $key in
 PasswordAuthentication) other=yes;;
 PermitRootLogin) other=yes;;
 esac
 echo "$key $other"
done < $file.old > $file

EOF
    tags = {
      Name = "QaEc2"
    }  
}

resource "aws_instance" "UatEc2" {
    ami = var.AMI[var.REGION]
    instance_type = var.type
    key_name = aws_key_pair.projectKey.key_name
    subnet_id = aws_subnet.subnet_uat.id
    security_groups = [aws_security_group.projectSGPrivate.id]
    count = 2
    user_data = <<EOF
    #!/bin/bash
file=/etc/ssh/sshd_config
cp -p $file $file.old &&
while read key other
do
 case $key in
 PasswordAuthentication) other=yes;;
 PermitRootLogin) other=yes;;
 esac
 echo "$key $other"
done < $file.old > $file

EOF
    tags = {
      Name = "UatEc2"
    }  
}

resource "aws_instance" "jumpping_Linux" {
    ami = var.AMI[var.REGION]
    instance_type = var.type
    key_name = aws_key_pair.projectKey.key_name
    subnet_id = aws_subnet.subnet_jumpping.id
    security_groups = [aws_security_group.projectSG.id]
    user_data = <<EOF
    #!/bin/bash
file=/etc/ssh/sshd_config
cp -p $file $file.old &&
while read key other
do
 case $key in
 PasswordAuthentication) other=yes;;
 PermitRootLogin) other=yes;;
 esac
 echo "$key $other"
done < $file.old > $file

EOF
    tags = {
      Name = "jumpping_Linux"
    }  
}

resource "aws_instance" "JumppingServer" {
    ami = "ami-077d687accca02dc1"
    instance_type = var.type
    key_name = var.key[var.REGION]
    subnet_id = aws_subnet.subnet_jumpping.id
    security_groups = [aws_security_group.projectSG.id]
    tags = {
      Name = "JumppingServer"
    }
}

output "public_ip" {
    value = aws_instance.JumppingServer.public_ip
}

output "private_ip" {
    value = ["Uat", aws_instance.UatEc2.*.private_ip, 
    "Qa", aws_instance.QaEc2.*.private_ip,
    "Dev", aws_instance.DevEc2.*.private_ip,
    "Ansible", aws_instance.AnsibleController.private_ip,
    "Jenkins", aws_instance.Jenkins.private_ip]
}

resource "local_file" "hosts" {
    filename = "hosts"
    count = 2
    content = "[Dev]\n${aws_instance.DevEc2[count.index].private_ip} ansible_ssh_user=ansible\n[Qa]\n${aws_instance.QaEc2[count.index].private_ip} ansible_ssh_user=ansible\n[Uat]\n${aws_instance.UatEc2[count.index].private_ip} ansible_ssh_user=ansible\n"
}
